--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,155 @@
-
-
-.cart{
-    text-decoration: none;
-    color:rgb(255, 255, 255);
-    padding-right: 1em;
+.cart {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding-right: 1em;
 }
 
-.cart:hover{
-    color:red;
+.cart:hover {
+  color: red;
+}
+
+a {
+  text-decoration: none;
 }
 
 .qty-display {
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    background-color: rgb(233, 20, 20);
-    border-radius: 50%;
-    font-size: 12px;
-    position: absolute;
-    text-align: center;
-    line-height: 17px;
-    margin-left:-2em;
-  }
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-color: rgb(233, 20, 20);
+  border-radius: 50%;
+  font-size: 12px;
+  position: absolute;
+  text-align: center;
+  line-height: 17px;
+  margin-left: -2em;
+}
 
-  .navLogo{
-    background-image: url(./assets/logo2.svg);
-    width:5em;
-    height:3em;
-    background-repeat: no-repeat;
-  }
-  
+.navLogo {
+  background-image: url(./assets/logo2.svg);
+  width: 5em;
+  height: 3em;
+  background-repeat: no-repeat;
+}
+
+.dropdown-menu {
+  background-color: rgb(27, 27, 27);
+}
+
+.navText {
+  color: white;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgb(39, 38, 38);
+  background: linear-gradient(
+    180deg,
+    rgba(39, 38, 38, 1) 75%,
+    rgba(55, 11, 11, 1) 97%,
+    rgba(102, 7, 7, 1) 100%
+  );
+
+}
+
+.productSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 75%;
+  justify-content: center;
+  height: 100%;
+}
+
+.pCard {
+  display: flex;
+  width: 18em;
+  height: 25em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin: 1%;
+  position: relative;
+  border-radius: 10px;
+  transition: 0.5s;
+  color: #fff;
+}
+
+.productImg {
+  width: 10em;
+  height: 10em;
+  margin: 20%;
+}
+
+.productStock {
+  position: absolute;
+  text-align: center;
+  top: 15%;
+  left: 63%;
+  border-radius: 1px;
+  background: red;
+  font-weight: 900;
+  width: 89px;
+  font-size: 1em;
+}
+
+.productContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.productTitle {
+  font-size: 1em;
+  font-weight: 600;
+  text-align: center;
+  height: 4em;
+}
+
+.productDetailBtn {
+  color: #fff;
+  border-radius: 6px;
+  border-color: red;
+}
+
+.productDetailBtn:hover {
+  text-decoration: none;
+}
+
+.detailMainContainer {
+  display: flex;
+  justify-content: center;
+  background-color: #0f0606;
+  color: #fff;
+}
+
+.detailCard {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.detailContent {
+  display: flex;
+}
+
+.detailAvailability {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  border: 3px solid rgb(128, 0, 0);
+  border-radius: 10px;
+}
+
+.detailImg {
+  width: 20em;
+  height: 20em;
+  margin: 20%;
+}
