--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  box-shadow: none;
+}
+
+body{
+  background: rgb(39, 38, 38);
+  background: linear-gradient(
+    180deg,
+    rgba(39, 38, 38, 1) 75%,
+    rgba(55, 11, 11, 1) 97%,
+    rgba(102, 7, 7, 1) 100%
+  );
+
+}
+
 .cart {
   text-decoration: none;
   color: rgb(255, 255, 255);
@@ -25,6 +44,11 @@ a {
   margin-left: -2em;
 }
 
+.navMain{
+  background: rgb(39, 38, 38) !important;
+  border-bottom: 3px solid red;
+}
+
 .navLogo {
   background-image: url(./assets/logo2.svg);
   width: 5em;
@@ -46,17 +70,9 @@ a {
   align-items: center;
   width: 100%;
   height: 100%;
-  background: rgb(39, 38, 38);
-  background: linear-gradient(
-    180deg,
-    rgba(39, 38, 38, 1) 75%,
-    rgba(55, 11, 11, 1) 97%,
-    rgba(102, 7, 7, 1) 100%
-  );
-
 }
 
-.productSection {
+.productContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -95,6 +111,7 @@ a {
   left: 63%;
   border-radius: 1px;
   background: red;
+  color:black;
   font-weight: 900;
   width: 89px;
   font-size: 1em;
@@ -126,8 +143,9 @@ a {
 .detailMainContainer {
   display: flex;
   justify-content: center;
-  background-color: #0f0606;
+  background: rgb(39, 38, 38);
   color: #fff;
+  height: 100%;
 }
 
 .detailCard {
